--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,11 @@
 
     <dependencies>
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
-    <dependency>
-        <groupId>org.testng</groupId>
-        <artifactId>testng</artifactId>
-        <version>7.0.0</version>
-        <scope>test</scope>
-    </dependency>
+        <dependency>
+            <groupId>com.galenframework</groupId>
+            <artifactId>galen-java-support</artifactId>
+            <version>2.0.3</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
         <dependency>
