--- a/test-output/old/AndroidNativeSuite/Android native app test on Pixel.properties
+++ b/test-output/old/AndroidNativeSuite/Android native app test on Pixel.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Android native app test on Pixel][SuiteResult context=Android native app test on s8]
+[SuiteResult context=Android native app test on s8][SuiteResult context=Android native app test on Pixel]
